--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '<enter your client id here>',
+        'client_id': '7aa8ef7e-7846-4202-98c7-92503e6f701b',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
